--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+/* html, body {
+  height: 100%;
+}
+
+#sidebar {
+  position: absolute;
+  height: 100%;
+  min-width: 180px;
+  z-index: 1;
+} */
+
+#sidebar {
+  height: 100vh;
+  width: 250px;
+}
